[workspace]
members = ["db", "cli", "web"]
resolver = "2"

[workspace.dependencies]
color-eyre = "0.6.3"
sqlx = { version = "0.7", default-features = false }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }

[workspace.lints.clippy]
pedantic = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
