
[workspace]
members = ["cores", "cli", "web", "fixtures"]
resolver = "2"
default-members = ["web"]


[workspace.dependencies]
color-eyre = "0.6.3"
sqlx = { version = "0.7", default-features = false }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
openai = { version = "1.0.0-alpha.14", features = [
  "rustls",
], default-features = false }

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
items_after_statements = "allow"
