[package]
name = "cli"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
db = { path = "../db" }
color-eyre = { workspace = true }
clap = { version = "4.1", features = ["derive"] }
sqlx.workspace = true
uuid.workspace = true
url.workspace = true

[lints]
workspace = true
