[package]
name = "db"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
html2md = "0.2.14"
readability = { version = "0.3.0", default-features = false }
reqwest = { version = "0.12.4", features = [
  "rustls-tls"
], default-features = false }

sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "chrono", "migrate", "macros", "uuid"] }
tracing = { workspace = true }
url.workspace = true
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
