[package]
name = "fixtures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = "0.3.18"
cja = { version = "0.0.0", git = "https://github.com/coreyja/coreyja.com", branch = "main" }
color-eyre.workspace = true
chrono.workspace = true

[lints]
workspace = true

[[bin]]
name = "openai"
path = "src/openai.rs"
