[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
tokio = { workspace = true, features = ["full"] }
cja = { version = "0.0.0", git = "https://github.com/coreyja/coreyja.com", branch = "main" }
color-eyre = "0.6.3"
sqlx.workspace = true
async-trait = "0.1.80"
serde = { version = "1.0.203", features = ["derive"] }
miette = { version = "5.7", features = ["fancy"] }

[lints]
workspace = true
