[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
tokio = { workspace = true, features = ["full"] }
cja = { version = "0.0.0", git = "https://github.com/coreyja/coreyja.com", branch = "main" }
color-eyre = "0.6.3"
sqlx.workspace = true
async-trait = "0.1.80"
serde = { version = "1.0.203", features = ["derive"] }
tracing.workspace = true
futures = "0.3.30"
axum = { version = "0.7.5", features = ["macros"] }
maud = { version = "0.26.0" }
tower-http = "0.5.2"
uuid.workspace = true
chrono.workspace = true
thiserror = "1.0.61"
password-auth = "1.0.0"

[lints]
workspace = true
